--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,16 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Anthony Taolun Wu
     - name: Languages
-      value: English, German
+      value: English, Chinese
 
 - title: Education
   type: time_table
   contents:
     - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+      institution: University of California, irvine
+      year: 2023-2027
       description:
         - Description 1.
         - Description 2.
@@ -21,63 +19,37 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: MD/PhD
+      institution: Univeristy of California, Irvine School of Medicine
+      year: 2022-2030
       description:
-        - Description 1.
-        - Description 2.
-
+        - Computer Vision
+        - Advisor: Xiaohui Xie
+      - title: Bachelors of Science
+      institution: Washington University in St. Louis
+      year: 2017-2021
+      description:
+        - Degree in Biomedical Engineering
+        - Second Major in Computer Science
+        
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: TITLE
+      institution: PLACE
+      year: TIME
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
+        - DESCRIPTORS
+        - title: SUB TITLE
           contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+            - SUBDESCRIPTOR
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: YEAR
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
-      items:
-        - Max Planck Medal
+        - ITEMS
 
 - title: Academic Interests
   type: nested_list
