--- a/_config.yml
+++ b/_config.yml
@@ -159,9 +159,9 @@ external_sources:
 #       layout: post
 #     output: true
 #     permalink: /news/:path/
-#   projects:
-#     output: true
-#     permalink: /projects/:path/
+  projects:
+    output: true
+    permalink: /projects/:path/
 
 announcements:
   enabled: true
