--- a/_config.yml
+++ b/_config.yml
@@ -153,7 +153,7 @@ external_sources:
 # Collections
 # -----------------------------------------------------------------------------
 
-# collections:
+collections:
 #   news:
 #     defaults:
 #       layout: post
