--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,7 @@ description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: anthony-wu, wu, university-of-california, computer-science, imaging, artificial-intelligence, irvine, uci, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: anthony-wu, wu, anthony-taolun-wu, university-of-california, medicine, research, computer-science, imaging, artificial-intelligence, irvine, uci, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
@@ -92,7 +91,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  Connect with me using the links above!
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
@@ -111,8 +110,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Recent Events # blog_name will be displayed in your blog page
+blog_description: A space to showcase my recent events!
 permalink: /blog/:year/:title/
 
 # Pagination
@@ -458,11 +457,7 @@ jsonresume:
   - work
   - education
   - publications
-  - projects
   - volunteer
   - awards
-  - certificates
-  - skills
   - languages
   - interests
-  - references
