--- a/_config.yml
+++ b/_config.yml
@@ -457,7 +457,7 @@ jsonresume:
   - work
   - education
   - publications
-  - "research grants"
+  - research grants
   - volunteer
   - awards
   - languages
