Add mentorship section; fix resume layout/CSS
Introduce a mentorship resume include and include it in the CV layout. Rename "grants" to "research grants" in _config.yml and assets/json/resume.json to match layout changes. Update work/volunteer/grants/education includes to use new cv-date-cell and cv-content-cell classes and remove inline min-width on badges. Add SCSS to prevent date badge and title overlap by using flex layout and fixed date column width so content wraps cleanly.

--- a/_config.yml
+++ b/_config.yml
@@ -457,7 +457,7 @@ jsonresume:
   - work
   - education
   - publications
-  - grants
+  - research grants
   - volunteer
   - awards
   - mentorship
